# dwmstatbar

./: CMakeLists.txt
src/: battery.cpp  battery.hpp  config.hpp  icon.cpp  icon.hpp  icons.cpp  icons.hpp  main.cpp  time.cpp  time.hpp
